Fixed the image cropping issue

--- a/src/styles/EnsembleCSS.css
+++ b/src/styles/EnsembleCSS.css
@@ -24,15 +24,15 @@ border:5px solid purple;}
     width: 40%;
     height: 500px;
     /* border:5px solid blue; */
-    background-size: cover;
+    background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
 }
 .RedWyatt{
     background-image:url('https://i.imgur.com/un78X9N.jpg');
 }
 .KatieWarren{
     background-image:url('https://i.imgur.com/LG6WNKb.jpg');
-    background-position-y: -150px;
 }
 .CourtenayCholovich{
     background-image:url('https://i.imgur.com/4m4XKlS.jpg');
@@ -45,18 +45,15 @@ border:5px solid purple;}
 }
 .CaseyKeelen{
     background-image:url("https://i.imgur.com/5DILR57.jpg");
-    background-position:top;
 }
 .KashunParks{
     background-image:url("https://i.imgur.com/Jb9tMaw.jpg");
-    background-position-y:-100px;
 }
 .JosephWatts{
     background-image:url("https://i.imgur.com/G5mrsHA.jpg");
 }
 .MichaelMyers{
     background-image:url("https://i.imgur.com/KIH6ilr.jpg");
-    background-position-y:-100px;
 }
 
 .Black{
